--- a/part_6/styles.css
+++ b/part_6/styles.css
@@ -1,6 +1,108 @@
 body {
+  width: 960px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "Computer Modern Serif";
   font-size: 16pt;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+h1 {
+  text-align: center;
+  letter-spacing: 10.6px;
+}
+
+.subtitle {
+  text-align: center;
+  font-style: italic;
+  letter-spacing: 3.2px;
+}
+
+blockquote {
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+blockquote p{
+  font-style: italic;
+}
+
+footer {
+  text-align: right;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+h2 {
+  border-top: 2px solid black;
+  border-bottom: 1px solid black;
+  font-size: 16pt;  
+  text-transform: uppercase;
+  letter-spacing: 5.35px;
+}
+
+h2 small {
+  font-style: italic;
+  font-size: 12pt;
+  font-weight: normal;
+  text-transform: none;
+  letter-spacing: 0px;
+}
+
+dl {
+  margin-bottom: 0;
+}
+
+dt {
+  float: left;
+}
+
+dd {
+  margin-left: 192px;
+}
+
+.schedule {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1.5px solid #D8D8D8;
+  border-collapse: collapse;
+  font-family: Helvetica;
+  font-weight: lighter;
+  font-size: 15pt;
+}
+
+th {
+  color: white;
+  background-color: black;
+  font-weight: 200;
+  border: 1.5px solid #D8D8D8;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+td {
+  border: 1.5px solid #D8D8D8;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.odd_week {
+  background-color: #E0E0F8;
+  border: 1.5px solid #D8D8D8;
+}
+
+.week {  
+  width: 90px;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-transform: rotate(-90deg);
 }
 
 
